# cpp-logger

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  logger.h
include/: logger.h  logger_settings.h
src/: CMakeLists.txt  logger.cpp  logger_impl.cpp  logger_impl.h  main.cpp  utility.cpp  utility.h
tests/: CMakeLists.txt  logger_tests.cpp  utility_tests.h
